# mock_vaccine_vx

./: README.md
mock_vaccine_vx/: excel_to_csv.py  load_data_to_bigquery.py  pyproject.toml
mock_vaccine_vx/dataform/raw/: dependencies.js
mock_vaccine_vx/dataform/refine/: cleaned_person.sqlx  normalized_location.sqlx  normalized_person.sqlx  normalized_vaccine.sqlx
mock_vaccine_vx/dataform/reporting/: vaccination_overview.sqlx
